Bug 455240 Address book card preview pane doesn't update for card changes via external interfaces (where notifications exist, e.g. OS X) and some internal updates too. r=Neil,sr=bienvenu